# textile

./: .gitignore
backend/: pyproject.toml
backend/src/textile/api/v1/: urls.py
backend/src/textile/api/v1/api_auth_app/: urls.py
backend/src/textile/apps/auth_app/: admin.py  apps.py  models.py
backend/src/textile/textile/: asgi.py  settings.py  urls.py  wsgi.py
frontend/textile/: .env  README.md  components.d.ts  env.d.ts  package.json  vite.config.ts
frontend/textile/src/: App.vue  main.ts
frontend/textile/src/api/: api.ts  baseClient.ts
frontend/textile/src/api/services/: auth.ts  orders.ts  users.ts
frontend/textile/src/assets/scss/: style.scss
frontend/textile/src/components/Blocks/: VAppFooter.vue
frontend/textile/src/enums/: appLayouts.enum.ts  routeNames.enum.ts
frontend/textile/src/layouts/: AppLayout.vue  AppLayoutAdmin.vue  AppLayoutAuth.vue  AppLayoutDefault.vue  AppLayoutError.vue  layouts.types.ts
frontend/textile/src/middlewares/router/: loadLayout.middleware.ts
frontend/textile/src/plugins/: index.ts  vuetify.ts
frontend/textile/src/router/: index.ts
frontend/textile/src/views/AuthViews/: ResetPasswordView.vue  SignInView.vue
frontend/textile/src/views/ErrorViews/: NotFoundPageView.vue
frontend/textile/src/views/HomeViews/: HomeView.vue
