[tool.poetry]
name = "textile"
version = "0.1.0"
description = ""
authors = ["k1rson <vlad2k15@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
